
Version 2.7:
	The following Android 3 has been problems solved:
		Problems with creating tables and executing other than select statements
		Now name of databases can be in mixed case
  Editing foreign key fields using selection list based on foreign key values
    (experimental and must be turned on in configuration)
  Now keeping main screen in portrait mode must be configured
	Logging can be turned on to collect informations about bugs (use
    aLogViewer and filter for aSQLMan)  Bug fixes

Version 2.6:
  Main screen now always in portrait
  First / last page in table viewer
  Simple filter option tin table viewer
  Quite a few bug fixes

Version 2.5:
  Bug fixes
  Hope the BLOB problem that some users gets is solved
  Now records can be deleted by pressing edit in the table viewer
  Can export and restore tables with BLOB fields
  Most of the functions are listed at the Help screen

Version 2.4:
  Now support table and field names with spaces
  Colours in table viewers data grid showing the type of the fields
  Tables with BLOB fields can be exported (but not imported)
  Quite a few bug fixes
  Catch errors on updates and inserts and tell what went wrong
  
Version 2.3:
  Progress bar during export of databases
  New Database info menu in Database viewer 
  Retrieving of preferences bug fixed
  No longer "force close" in Query builder if fields selected before tables

Version 2.2: 
  Minor change to work with aShell
  
Version 2.1:
  Bugs fixed (9 out of 12 reported. Too little information in the last three to be
    located:
    NumberFormatException When displaying and editing records where rowId
	  can not be stored in a Java int
	SQLiteException when trying to create new database in nonexistent path
	SQLiteException when trying to edit sqlite_master (can't be updated manually)
  Minor improvements:
	SQL in query viewer is now saved on exit and restored on load
		
Version (2.0):
  Tables can be dumped from "Table view" to SQL file (that can later be loaded 